# well-known-address-registry

./: Cargo.toml  registry.json
src/: lib.rs  main.rs  registry.rs  ser.rs  type.rs
src/registry/: acala.rs  astar.rs  collectives.rs  darwinia.rs  moonbeam.rs  polkadot.rs
