[package]
authors     = ["Xavier Lau <x@acg.box>"]
description = "Polkadot ecosystem well-known address registry."
edition     = "2021"
homepage    = "https://subscan-explorer/well-known-address-registry"
license     = "GPL-3.0"
name        = "well-known-address"
readme      = "README.md"
repository  = "https://github.com/subscan-explorer/well-known-address-registry"
version     = "0.3.1"

[dependencies]
anyhow             = { version = "1.0" }
array-bytes        = { version = "9.1", features = ["serde"] }
polkadot-sdk-frame = { version = "0.7", features = ["experimental"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = { version = "1.0" }
